fix warnings related to ext. dependencies (#12) and upgrade Jackson to version 3