@@ -16,12 +16,10 @@ import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.ThreadContext;
 import org.apache.logging.log4j.core.LoggerContext;
 import org.apache.logging.log4j.core.config.ConfigurationFactory;
-import org.apache.logging.log4j.util.PropertiesUtil;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.function.Executable;
 
 import io.github.duoduobingbing.gelflogging4j.RuntimeContainer;
 import io.github.duoduobingbing.gelflogging4j.gelf.GelfTestSender;
@@ -53,7 +51,7 @@ class GelfLogAppenderNettyTcpIntegrationTests {
     @BeforeAll
     static void setupClass() throws Exception {
         System.setProperty(ConfigurationFactory.CONFIGURATION_FILE_PROPERTY, "log4j2/log4j2-netty-tcp.xml");
-        PropertiesUtil.getProperties().reload();
+        //PropertiesUtil.getProperties().reload(); is now a no-op.
         loggerContext = (LoggerContext) LogManager.getContext(false);
         loggerContext.reconfigure();
         RuntimeContainer.lookupHostname(new SystemOutErrorReporter());
@@ -63,7 +61,7 @@ class GelfLogAppenderNettyTcpIntegrationTests {
     @AfterAll
     static void afterClass() throws Exception {
         System.clearProperty(ConfigurationFactory.CONFIGURATION_FILE_PROPERTY);
-        PropertiesUtil.getProperties().reload();
+        //PropertiesUtil.getProperties().reload(); is now a no-op.
         loggerContext.reconfigure();
         server.close();
     }
@@ -77,6 +75,7 @@ class GelfLogAppenderNettyTcpIntegrationTests {
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     void testSimpleInfo() throws Exception {
 
         Logger logger = loggerContext.getLogger(getClass().getName());
@@ -85,10 +84,10 @@ class GelfLogAppenderNettyTcpIntegrationTests {
 
         waitForGelf();
 
-        List jsonValues = server.getJsonValues();
+        List<?> jsonValues = server.getJsonValues();
         assertThat(jsonValues).hasSize(1);
 
-        Map<String, Object> jsonValue = (Map<String, Object>) jsonValues.get(0);
+        Map<String, Object> jsonValue = (Map<String, Object>) jsonValues.getFirst();
 
         assertThat(jsonValue.get(GelfMessage.FIELD_HOST)).isEqualTo(RuntimeContainer.FQDN_HOSTNAME);
         assertThat(jsonValue.get("_server.simple")).isEqualTo(RuntimeContainer.HOSTNAME);
@@ -119,13 +118,7 @@ class GelfLogAppenderNettyTcpIntegrationTests {
 
         logger.info("");
 
-        assertThrows(TimeoutException.class, new Executable() {
-
-            @Override
-            public void execute() throws Throwable {
-                waitForGelf();
-            }
-        });
+        assertThrows(TimeoutException.class, this::waitForGelf);
 
     }
 
